[package]
name = "leetcode_entry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
test = []

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["json", "cookies"] }
serde = { version = "1.0.188", features = ["serde_derive", "derive"] }
serde_json = "1.0.107"
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
