# Virtual workspace for all the members to rely on
# This allows me to have a single place for common crates to be included
[workspace]
members = ["lc_lib", "lc_cli", "lc_tui"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["serde_derive", "derive"] }
serde_json = "1.0.107"
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["json", "cookies"] }
edit = { version = "0.1.4" }
