[package]
name = "lc_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lc_lib = { path = "../lc_lib" }
clap = { version = "4.4.4", features = ["derive"] }

regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "cookies"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["serde_derive", "derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
