[package]
name = "lc_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
rayon = "1.8.0"
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["json", "cookies"] }
scraper = "0.17.1"
serde = { version = "1.0.188", features = ["serde_derive", "derive"] }
serde_json = "1.0.107"
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
