[package]
name = "lc_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lc_lib = { path = "../lc_lib" }
ratatui = { version = "0.23.0", features = ["all-widgets"] }
crossterm = "0.27.0"

regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "cookies"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["serde_derive", "derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
scraper = "0.17.1"
ego-tree = "0.6.2"
strfmt = "0.2.4"
