[package]
name = "lc_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lc_lib = { path = "../lc_lib" }
ratatui = { version = "0.23.0", features = ["all-widgets"] }
crossterm = "0.27.0"
html2text = "0.6.0"

regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "cookies"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["serde_derive", "derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
image = "0.24.7"
ratatui-image = { version = "0.3.0", features = ["crossterm"] }
syntect = "5.1.0"
syntect-tui = { git = "https://github.com/MickHarrigan/syntect-tui.git" }
